--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Resume - Kelly Bootstrap Template</title>
+  <title>Resume - septina-uts</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -82,7 +82,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Resume ini disusun dengan inspirasi dari pengalaman profesional dan akademik, menyoroti perjalanan karier serta pencapaian</p>
+        <p>Resume ini disusun dengan inspirasi dari pengalaman profesional dan akademik, menyoroti perjalanan karier serta pencapaian dari Kelly</p>
       </div><!-- End Section Title -->
 
       <div class="container">
