--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
           <li><a href="about.html" class="active">Tentang</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="portfolio-details.html">Portofolio Details</a></li>
+          <li><a href="portfolio-details.html">Proyek</a></li>
             <ul>
           
             </ul>
