--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="index.html">Beranda</a></li>
           <li><a href="about.html" class="active">Tentang</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="resume.html">Riwayat Pendidikan</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="portfolio-details.html">Proyek</a></li>
             <ul>
@@ -99,7 +99,7 @@ Saya memiliki ketertarikan besar pada dunia teknologi, khususnya dalam bidang ja
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Ulang Tahun:</strong> <span>XX SEP XXXX</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Ulang Tahun:</strong> <span>17 September 2004</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Situs Web:</strong> <span>www.example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Kota:</strong> <span>Lamongan, Jawa Timur</span></li>
                 </ul>
@@ -107,8 +107,8 @@ Saya memiliki ketertarikan besar pada dunia teknologi, khususnya dalam bidang ja
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Umur:</strong> <span>20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Telepon:</strong> <span>+123456789</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sazahrah1709@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telepon:</strong> <span>085646864353</span></li>
                 </ul>
               </div>
             </div>
