--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="index.html">Beranda</a></li>
           <li><a href="about.html">Tentang</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="resume.html">Riwayat Pendidikan</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="portfolio-details.html">Proyek</a></li>
                 <ul>
@@ -104,7 +104,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Hubungi Kami</h3>
-                  <p>+123456789</p>
+                  <p>085646864353</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -112,7 +112,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email</h3>
-                  <p>info@example.com</p>
+                  <p>zsazahrah1709@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
