--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="index.html" class="active">Beranda</a></li>
           <li><a href="about.html">Tentang</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="resume.html">Riwayat Pendidikan</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="portfolio-details.html">Proyek</a></li>
           <ul>
