--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="index.html">Beranda</a></li>
           <li><a href="about.html">Tentang</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="resume.html">Riwayat Pendidikan</a></li>
           <li><a href="portfolio.html" class="active">Portfolio</a></li>
           <li><a href="portfolio-details.html">Proyek</a></li>
           <ul>
@@ -81,7 +81,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Berikut adalah gambar yang saya ambil di berbagai tempat</p>
+        <p>Berikut adalah tangkapan terbaik saya yang di ambil di berbagai tempat</p>
       </div><!-- End Section Title -->
 
       <div class="container">
