--- a/proyek.html
+++ b/proyek.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="index.html">Beranda</a></li>
           <li><a href="about.html">Tentang</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="resume.html">Riwayat Pendidikan</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="portfolio-details.html" class="active">Proyek</a></li>
           <ul>
@@ -108,6 +108,7 @@
     <div class="container">
       <div class="copyright text-center ">
       <p>© 2025 Septina. Hak cipta dilindungi.</p>
+      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
