--- a/portfolio.html
+++ b/portfolio.html
@@ -199,6 +199,7 @@
     <div class="container">
       <div class="copyright text-center ">
         <p>© 2025 Septina. Hak cipta dilindungi.</p>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
