--- a/about.html
+++ b/about.html
@@ -190,6 +190,7 @@ Saat ini saya sedang mengembangkan beberapa proyek pribadi seperti aplikasi todo
     <div class="container">
       <div class="copyright text-center ">
       <p>© 2025 Septina. Hak cipta dilindungi.</p>
+      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
