--- a/RiwayatPendidikan.html
+++ b/RiwayatPendidikan.html
@@ -97,7 +97,7 @@
               <ul>
                 <li>Sukodadi, Lamongan, Jatim</li>
                 <li>085646864353</li>
-                <li>sazahrah1703@gmail.com/li>
+                <li>sazahrah1709@gmail.com/li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -149,6 +149,7 @@
     <div class="container">
       <div class="copyright text-center ">
         <p>© 2025 Septina. Hak cipta dilindungi.</p>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
