--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
           <li><a href="index.html">Beranda</a></li>
           <li><a href="about.html" class="active">Tentang</a></li>
           <li><a href="resume.html">Riwayat Pendidikan</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html">Photo</a></li>
           <li><a href="portfolio-details.html">Proyek</a></li>
             <ul>
           
