--- a/proyek.html
+++ b/proyek.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Proyek - Kelly Bootstrap Template</title>
+  <title>Proyek - septina-uts </title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -52,7 +52,7 @@
           <li><a href="index.html">Beranda</a></li>
           <li><a href="about.html">Tentang</a></li>
           <li><a href="resume.html">Riwayat Pendidikan</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html">Photo</a></li>
           <li><a href="portfolio-details.html" class="active">Proyek</a></li>
           <ul>
             </ul>
