--- a/portofolio.html
+++ b/portofolio.html
@@ -80,7 +80,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Photo</h2>
+        <h2>Portofolio</h2>
         <p>Berikut adalah karya yang saya ambil di berbagai tempat</p>
       </div><!-- End Section Title -->
 
